[dash] fixed layout issues

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -513,6 +513,9 @@ input{
 .np{
 	padding:0 !important;
 }
+.np2{
+	padding-bottom:0 !important;
+}
 .circles{
 	width:56px;
 	height:56px;
@@ -665,7 +668,7 @@ input{
 	}
 }
 .bg2{
-	background:rgba($darkwhite,0.3);
+	background:rgba($lightgrey,0.3);
 	margin-bottom:1em;
 	padding:0.75em;
 	border:1px solid $grey;
